--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ install:
 
 script:
     - vendor/bin/phpcs --report-full --standard=PSR2 src tests
-    - if [[ ! $SKIP_PHP_CS_FIXER ]]; then vendor/bin/php-cs-fixer fix --config=tests/.php-cs-fixer.config.php --diff --dry-run src tests; else exit 0; fi
+    - if [[ ! $SKIP_PHP_CS_FIXER ]]; then vendor/bin/php-cs-fixer fix --config=tests/php-cs-fixer.config.php --diff --dry-run src tests; else exit 0; fi
     - vendor/bin/phpunit -c tests/phpunit.xml
