--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "kubawerlos/composer-json-fixer",
-    "description": "A tool to fix composer.json file",
+    "description": "A tool for fixing and cleaning up `composer.json` file according to its schema and best practices.",
     "type": "library",
     "keywords": [
         "composer",
@@ -16,6 +16,7 @@
     "require": {
         "php": ">=5.6.6",
         "ext-json": "*",
+        "ext-mbstring": "*",
         "sebastian/diff": "^1",
         "symfony/console": "^2.7 || ^3",
         "symfony/filesystem": "^2.7 || ^3",
@@ -23,7 +24,7 @@
         "symfony/process": "^2.7 || ^3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.3",
+        "friendsofphp/php-cs-fixer": "^2.4",
         "phpunit/phpunit": "^5.7",
         "squizlabs/PHP_CodeSniffer": "^3.0"
     },
