--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=5.6.6",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "sebastian/diff": "^1",
+        "sebastian/diff": "^1 || ^2",
         "symfony/console": "^2.7 || ^3",
         "symfony/filesystem": "^2.7 || ^3",
         "symfony/finder": "^2.7 || ^3",
