--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "sebastian/diff": "^1 || ^2",
-        "symfony/console": "^2.7 || ^3",
-        "symfony/filesystem": "^2.7 || ^3",
-        "symfony/finder": "^2.7 || ^3",
-        "symfony/process": "^2.7 || ^3"
+        "symfony/console": "^2.7 || ^3 || ^4",
+        "symfony/filesystem": "^2.7 || ^3 || ^4",
+        "symfony/finder": "^2.7 || ^3 || ^4",
+        "symfony/process": "^2.7 || ^3 || ^4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.4",
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^5.7 || ^6",
         "squizlabs/PHP_CodeSniffer": "^3.0"
     },
     "autoload": {
