--- a/.travis.yml
+++ b/.travis.yml
@@ -17,16 +17,15 @@ matrix:
         - php: '5.6.30'
         - php: '7.0'
         - php: '7.1'
-        - php: 'nightly'
-          env: SKIP_PHP_CS_FIXER=true
+        - php: '7.2'
 
 before_install:
     - composer self-update --stable
 
 install:
-    - composer install --ignore-platform-reqs
+    - composer install
 
 script:
     - vendor/bin/phpcs --report-full --standard=PSR2 src tests
-    - if [[ ! $SKIP_PHP_CS_FIXER ]]; then vendor/bin/php-cs-fixer fix --config=tests/php-cs-fixer.config.php --diff --dry-run src tests; else exit 0; fi
+    - vendor/bin/php-cs-fixer fix --config=tests/php-cs-fixer.config.php --diff --dry-run src tests
     - vendor/bin/phpunit -c tests/phpunit.xml
