--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.8",
+        "mikey179/vfsStream": "^1.6",
         "phpunit/phpunit": "^5.7 || ^6",
         "squizlabs/PHP_CodeSniffer": "^3.1"
     },
