Fixing Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ notifications:
 
 matrix:
     include:
-        - php: '5.6.30'
-          env: COMPOSER_FLAGS="--prefer-lowest"
+        - php: '5.6.6'
+          install: composer update --prefer-lowest
         - php: '7.0'
         - php: '7.1'
         - php: '7.2'
@@ -26,7 +26,7 @@ before_install:
     - composer self-update --stable
 
 install:
-    - composer install $COMPOSER_FLAGS
+    - composer install
 
 script:
     - vendor/bin/phpcs --report-full --standard=PSR2 src tests
