--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
+/src/Command/ReadmeCommand.php export-ignore
 /tests/ export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
+/readme export-ignore
