--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "friendsofphp/php-cs-fixer": "^2.9",
         "mikey179/vfsStream": "^1.6",
         "phpunit/phpunit": "^5.7 || ^6",
-        "squizlabs/PHP_CodeSniffer": "^3.1"
+        "squizlabs/PHP_CodeSniffer": "^3.1",
+        "symfony/yaml": "^3.4 || ^4"
     },
     "autoload": {
         "psr-4": {
