--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,5 @@
-/src/Command/ReadmeCommand.php export-ignore
+/src/Readme export-ignore
 /tests/ export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
-/readme export-ignore
