--- a/composer.json
+++ b/composer.json
@@ -14,21 +14,21 @@
         }
     ],
     "require": {
-        "php": ">=5.6.6",
+        "php": "^7.1",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "sebastian/diff": "^1 || ^2",
+        "sebastian/diff": "^1 || ^2 || ^3",
         "symfony/console": "^2.7 || ^3 || ^4",
         "symfony/filesystem": "^2.7 || ^3 || ^4",
         "symfony/finder": "^2.7 || ^3 || ^4",
         "symfony/process": "^2.7 || ^3 || ^4"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.9",
+        "friendsofphp/php-cs-fixer": "^2.12",
         "mikey179/vfsStream": "^1.6",
-        "phpunit/phpunit": "^5.7 || ^6",
-        "squizlabs/php_codesniffer": "^3.2",
-        "symfony/yaml": "^3.4 || ^4"
+        "phpunit/phpunit": "^7.2",
+        "squizlabs/php_codesniffer": "^3.3",
+        "symfony/yaml": "^4.1"
     },
     "autoload": {
         "psr-4": {
