--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /src/Readme export-ignore
 /tests/ export-ignore
+/.coveralls.yml export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
