--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ git:
 
 cache:
     directories:
-        - $HOME/.composer/cache
+        - $HOME/.composer
 
 sudo: false
 
@@ -20,9 +20,14 @@ matrix:
         - php: '7.2'
           env: RUN_PHPSTAN=true
           install: composer require --dev phpstan/phpstan phpstan/phpstan-strict-rules
+        - php: '7.2'
+          env: COVERAGE=--coverage-clover=coverage.xml
+          install: composer require --dev php-coveralls/php-coveralls
+          after_success: vendor/bin/php-coveralls -v
 
 before_install:
     - composer self-update --stable
+    - composer global show hirak/prestissimo -q || composer global require hirak/prestissimo
 
 install:
     - composer install
@@ -31,5 +36,5 @@ script:
     - vendor/bin/phpcs --report-full --standard=PSR2 src tests
     - vendor/bin/php-cs-fixer fix --config=tests/php-cs-fixer.config.php --diff --dry-run
     - vendor/bin/types-checker src tests
-    - vendor/bin/phpunit -c tests/phpunit.xml
-    - if [[ $RUN_PHPSTAN ]]; then vendor/bin/phpstan analyse --configuration=tests/phpstan.neon --level=max src; else exit 0; fi
+    - vendor/bin/phpunit --configuration=tests/phpunit.xml $COVERAGE
+    - if [[ $RUN_PHPSTAN ]]; then vendor/bin/phpstan analyse --configuration=tests/phpstan.neon --level=max src; else return 0; fi
