--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.12",
+        "kubawerlos/types-checker": "^1.1",
         "mikey179/vfsStream": "^1.6",
         "phpunit/phpunit": "^7.2",
         "squizlabs/php_codesniffer": "^3.3",
-        "symfony/yaml": "^4.1",
-        "kubawerlos/types-checker": "^1.1"
+        "symfony/yaml": "^4.1"
     },
     "autoload": {
         "psr-4": {
@@ -40,6 +40,20 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@analyse",
+            "@phpunit"
+        ],
+        "analyse": [
+            "vendor/bin/phpcs --exclude=Generic.Files.LineLength --report-full --standard=PSR2 src tests",
+            "vendor/bin/php-cs-fixer fix --config=tests/php-cs-fixer.config.php --diff --dry-run",
+            "vendor/bin/types-checker src tests"
+        ],
+        "phpunit": [
+            "phpdbg -qrr vendor/bin/phpunit --configuration=tests/phpunit.xml"
+        ]
     },
     "bin": [
         "composer-json-fixer"
