--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "phpstan/phpstan-strict-rules": "^0.10.0",
         "phpunit/phpunit": "^7.2",
         "squizlabs/php_codesniffer": "^3.3",
-        "symfony/yaml": "^4.1"
+        "symfony/yaml": "^4.1",
+        "vimeo/psalm": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -49,10 +50,12 @@
             "@phpunit"
         ],
         "analyse": [
+            "./composer-json-fixer",
             "vendor/bin/phpcs --exclude=Generic.Files.LineLength --report-full --standard=PSR2 src tests",
             "vendor/bin/php-cs-fixer fix --config=tests/php-cs-fixer.config.php --diff --dry-run",
             "vendor/bin/types-checker src tests",
-            "vendor/bin/phpstan analyse --ansi --configuration=tests/phpstan.neon --level=max src"
+            "vendor/bin/phpstan analyse --ansi --configuration=tests/phpstan.neon --level=max src",
+            "vendor/bin/psalm --config=tests/psalm.xml"
         ],
         "phpunit": [
             "phpdbg -qrr vendor/bin/phpunit --configuration=tests/phpunit.xml"
