--- a/composer.json
+++ b/composer.json
@@ -14,25 +14,25 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.4",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "sebastian/diff": "^1 || ^2 || ^3",
-        "symfony/console": "^2.7 || ^3 || ^4",
-        "symfony/filesystem": "^2.7 || ^3 || ^4",
-        "symfony/finder": "^2.7 || ^3 || ^4",
-        "symfony/process": "^2.7 || ^3 || ^4"
+        "sebastian/diff": "^4.0",
+        "symfony/console": "^5.0",
+        "symfony/filesystem": "^5.0",
+        "symfony/finder": "^5.0",
+        "symfony/process": "^5.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.12",
-        "kubawerlos/types-checker": "^1.1",
-        "mikey179/vfsStream": "^1.6",
-        "phpstan/phpstan": "^0.10.0",
-        "phpstan/phpstan-strict-rules": "^0.10.0",
-        "phpunit/phpunit": "^7.2",
-        "squizlabs/php_codesniffer": "^3.3",
-        "symfony/yaml": "^4.1",
-        "vimeo/psalm": "^2.0"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "kubawerlos/types-checker": "^2.0",
+        "mikey179/vfsstream": "^1.6",
+        "phpstan/phpstan": "^0.12.18",
+        "phpstan/phpstan-strict-rules": "^0.12.2",
+        "phpunit/phpunit": "^9.1",
+        "squizlabs/php_codesniffer": "^3.5",
+        "symfony/yaml": "^5.0",
+        "vimeo/psalm": "^3.11"
     },
     "autoload": {
         "psr-4": {
